syntax = "proto3";

package tpa.network.event;

import "google/protobuf/timestamp.proto";
import "event.proto";

service EventService {
    rpc GetAllEvents (GetAllEventsRequest) returns (GetAllEventsResponse);
    rpc GetEventById (GetEventByIdRequest) returns (GetEventByIdResponse);
    rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse);
    rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse);
}

message GetAllEventsRequest {}

message GetAllEventsResponse {
    repeated Event events = 1;
}

message GetEventByIdRequest {
    string id = 1;
}

message GetEventByIdResponse {
    optional Event event = 1;
}

message CreateEventRequest {
    string title = 1;
    string description = 2;
    string image_url = 3;
    google.protobuf.Timestamp datetime = 4;
    int32 duration_minutes = 5;
    string location = 6;
    double price = 7;
    int32 capacity = 8;
}

message CreateEventResponse {
    string id = 1;
}

message DeleteEventRequest {
    string id = 1;
}

message DeleteEventResponse {
    string id = 1;
}